--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 body{
   font-family: 'Lato', sans-serif;
+  padding: 20px 60px;
   /* font-family: 'Antonio', sans-serif; */
 /* font-family: 'Bigelow Rules', cursive; */
 }
