adding a custom header file

--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,8 @@ body{
   /* font-family: 'Antonio', sans-serif; */
 /* font-family: 'Bigelow Rules', cursive; */
 }
+
+a{
+  text-decoration: none;
+  color: black;
+}
